FDS 1주차 공부-3월 22일

--- a/JavaScript/2.JS_DataType.md
+++ b/JavaScript/2.JS_DataType.md
@@ -107,4 +107,4 @@ HTML강의로 가득찼던 하루였지만 어제 배운 것을 복습할 겸
 
 > 인사이드 자바스크립트 | 저자: 송형주, 고현준 | 한빛미디어
 
-> <http://insanehong.kr/post/javascript-datatype/>
+> 블로그 : <http://insanehong.kr/post/javascript-datatype/>
