FDS 2주차 공부-3월 26일

--- a/HTML5/4. HTML5_Tag.md
+++ b/HTML5/4. HTML5_Tag.md
@@ -320,7 +320,7 @@ ex) <q cite="https://www.w3c.org">World Wide Web</q><br/><br/>
     |autoplay|음악 파일을 자동의 재생 개시할 것인지 지정|
     |loop|음악을 반복할 것인지 지정|
     |controls|음악 재생 도구를 표시할 것인지 지정. 재생 도구의 외관은 브라우저마다 차이가 있습니다.|
-    
+
 <br/>
     
   - <mark style="background:lightpink; font-size:18px;">웹브라우저별 지원하는 음악 파일 형식</mark>
@@ -408,7 +408,7 @@ ex) <q cite="https://www.w3c.org">World Wide Web</q><br/><br/>
 앞으로 더 공부할 CSS와 JavaScript도 제가 모르던 기능을 만나게 될 거라는
 생각을 하다보니 설렘이 가득한 것 같습니다.
 기술들을 공부하고 습득한다는 것만큼 행복한 게 없는 것 같습니다.
-앞으로도 열심히 공부하고 꺠닫도록 노력하겠습니다.
+앞으로도 열심히 공부하고 깨닫도록 노력하겠습니다.
 ```
 
 # 3. refer
