FDS 2주차 공부-3월 27일~28일

--- a/HTML5/4. HTML5_Tag.md
+++ b/HTML5/4. HTML5_Tag.md
@@ -532,7 +532,9 @@ type 어트리뷰트는 생략 가능합니다.
 
 * input 태그의 text 어트리뷰트와 다르게 여러 줄의 텍스트를 입력할 때 사용합니다.<br/>
 
-  <textarea name="연습장" row="50" col="30" style="width:400px; height:100px;">낙서장입니다.</textarea>
+```
+<textarea name="연습장" row="50" col="30" style="width:400px; height:100px;">낙서장입니다.</textarea>
+```
 
 <br/><br/>
 
@@ -544,21 +546,26 @@ type 어트리뷰트는 생략 가능합니다.
   단, IE 의 경우 submit 되는 값이 다릅니다. (value 어트리뷰트의 값이 아닌 태그 안에 들어간 텍스트를 전달합니다.)<br/>
   그래서 오래된 IE 를 지원해야 한다면 input 태그를 쓰는게 좋습니다.
 
-  <button type="button" onclick="javascript:alert('호기심이 많으시군요!');">이 버튼을 누르신 당신은?</button>
+```
+<button type="button" onclick="alert('호기심이 많으시군요!');">이 버튼을 누르신 당신은?</button>
+```
 
-  <br/><br/>
+<br/><br/>
 
 ### fieldset / legend 태그
 
 * fieldset 태그는 관련된 입력 양식들을 그룹화할 때 사용합니다.<br/>
   legend 태그는 fieldset 태그 내에서 사용되야 하며 그룹화된 fieldset 의 제목을 정의합니다.<br/>
 
+```
 <fieldset>
 <legend>로그인</legend>
 <input type="text" placeholder="id를 입력해주세요" id='id'>
 <input type="text" placeholder="password를 입력해주세요" id='pw'>
 <input type="submit" value="제출">
 </fieldset>
+```
+
 <br/><br/>
 
 # 2. Today I Found Out
