--- a/HTML5/4. HTML5_Tag.md
+++ b/HTML5/4. HTML5_Tag.md
@@ -518,13 +518,14 @@ type 어트리뷰트는 생략 가능합니다.
 ### select 태그
 
 * 여러개의 리스트에서 복수개의 아이템을 선택할 때 사용합니다.<br/>
-  서버에 전송되는 데이터는 select 요소이 name 어트리뷰트를 키로, option 요소의 value 어트리뷰트를 값으로 하여 key=value 의 형태로 전송된다.
+  서버에 전송되는 데이터는 select 요소이 name 어트리뷰트를 키로,<br/>
+  option 요소의 value 어트리뷰트를 값으로 하여 key=value 의 형태로 전송됩니다.<br/>
 
-| tag      | Description             |
-| -------- | ----------------------- |
-| select   | select form 생성        |
-| option   | option 생성             |
-| optgroup | option 을 그룹화합니다. |
+  | tag      | Description             |
+  | -------- | ----------------------- |
+  | select   | select form 생성        |
+  | option   | option 생성             |
+  | optgroup | option 을 그룹화합니다. |
 
 <br/><br/>
 
