FDS 2주차 공부-3월 30일~4월 1일

--- a/CSS3/3. CSS_Layout_grid.md
+++ b/CSS3/3. CSS_Layout_grid.md
@@ -78,29 +78,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 
 `.gridbox` 요소를 그리드 컨테이너로 지정하였습니다.
 
-<head>
-  <style>
-    .gridbox {
-  display: grid;
-}
-    div {
-        background-color: salmon;
-    }
-  </style>
-</head>
-<body>
-<div class="gridbox">
-    <div>box1</div>
-    <div>box2</div>
-    <div>box3</div>
-    <div>box4</div>
-    <div>box5</div>
-    <div>box6</div>
-    <div>box7</div>
-    <div>box8</div>
-    <div>box9</div>
-</div>
-</body>
+<img src="./../../../image/grid1.jpg">
 
 바로 밑에 있는 모든 자식 요소들은 이제 그리드 아이템이 되었습니다.<br/>
 아직까지는 웹 브라우저에서 보여지는 모습은 그리드로 지정하기 전과 별반 다를 것이 없는데<br/>
@@ -125,34 +103,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 150px 의 너비를 가진 세로 열 방향의 트랙들을 생성하였습니다.<br/>
 자식 아이템들은 이제 그리드에 있는 각자의 그리드 쉘 위에 배치됩니다.<br/>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-<style>    
-    .gridbox1 {
-      display: grid;
-      grid-template-columns: 150px 150px 150px;
-    }
-    div {
-        background-color: salmon;
-    }
-  </style>
-</head>
-<body>
-<div class="gridbox1">
-    <div>box1</div>
-    <div>box2</div>
-    <div>box3</div>
-    <div>box4</div>
-    <div>box5</div>
-    <div>box6</div>
-    <div>box7</div>
-    <div>box8</div>
-    <div>box9</div>
-</div>
-</body>
-</html>
+<img src="./../../../image/grid2.jpg">
 
 <br/><br/>
 
@@ -168,30 +119,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 }
 ```
 
-<head>
-<style>
-  .gridbox2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  div {
-        background-color: salmon;
-    }
-  </style>
-</head>
-<body>
-<div class="gridbox2">
-    <div>box1</div>
-    <div>box2</div>
-    <div>box3</div>
-    <div>box4</div>
-    <div>box5</div>
-    <div>box6</div>
-    <div>box7</div>
-    <div>box8</div>
-    <div>box9</div>
-</div>
-</body>
+<img src="./../../../image/grid3.jpg" height="70">
 
 위에 있는 박스와는 다르게 fr 단위를 사용하였습니다.<br/>
 그리드 컨테이너의 크기가 줄어들거나 늘어남에 따라 자식 아이템들의 크기도<br/>
