FDS 2주차 공부-3월 27일~28일

--- a/HTML5/4. HTML5_Tag.md
+++ b/HTML5/4. HTML5_Tag.md
@@ -131,7 +131,7 @@ SEO(검색 엔젠 최적화)를 위해 검색엔진이 사용할 keywords를 정
 * `<blockquote>` [blockquote 태그] : 긴 인용문을 지정합니다.<br/>
   브라우저는 blockquote 요소를 들여쓰기 합니다. css 를 이용하여 다양한 style 을 적용시킬 수 있습니다.<br/>
   <blockquote>World Wide Web = "www.w3c.org"</blockquote>
-<br/><br/>
+  <br/><br/>
 
 ### Hyperlink Tag
 
@@ -361,6 +361,7 @@ SEO(검색 엔젠 최적화)를 위해 검색엔진이 사용할 keywords를 정
 
     Source 태그를 사용하여 파일 형식의 차이 문제를 해결할 수 있습니다.<br/>
     type 어트리뷰트는 생략가능합니다.
+
     ```html
     <!DOCTYPE html>
     <html>
@@ -391,19 +392,17 @@ SEO(검색 엔젠 최적화)를 위해 검색엔진이 사용할 keywords를 정
   | width    | 동영상의 너비를 지정                                                                    |
   | height   | 동영상의 높이를 지정                                                                    |
 
-          <br/>
+<br/><br/>
 
-      <br/>
+<mark style="background:lightpink; font-size:18px;">웹브라우저별 지원하는 동영상 파일 형식</mark>
 
-  <mark style="background:lightpink; font-size:18px;">웹브라우저별 지원하는 동영상 파일 형식</mark>
-
-  | Browser           | Mp4      | WebM | Ogv |
-  | ----------------- | -------- | ---- | --- |
-  | Internet Explorer | Yes      | No   | No  |
-  | Chrome            | Yes      | Yes  | Yes |
-  | Firefox           | Yes(21~) | Yes  | Yes |
-  | Safari            | Yes      | No   | No  |
-  | Opera             | Yes(25~) | Yes  | Yes |
+| Browser           | Mp4      | WebM | Ogv |
+| ----------------- | -------- | ---- | --- |
+| Internet Explorer | Yes      | No   | No  |
+| Chrome            | Yes      | Yes  | Yes |
+| Firefox           | Yes(21~) | Yes  | Yes |
+| Safari            | Yes      | No   | No  |
+| Opera             | Yes(25~) | Yes  | Yes |
 
 audio 태그와 마찬가지로 파일 형식의 차이 문제가 발생할 수 있는데,<br/>
 source 태그를 사용하여 형식 차이 문제를 해결할 수 있습니다<br/>
@@ -415,7 +414,7 @@ type 어트리뷰트는 생략 가능합니다.
   <head>
   </head>
   <body>
-    <audio controls>
+    <video controls>
       <source src="moong2.mp4" type="video/mp4">
       <source src="moong2.webm" type="video/webm">
   </body>
