--- a/CSS3/3. CSS_Layout_grid.md
+++ b/CSS3/3. CSS_Layout_grid.md
@@ -78,7 +78,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 
 `.gridbox` 요소를 그리드 컨테이너로 지정하였습니다.
 
-<img src="./../../../image/grid1.jpg">
+<img src="../../../image/grid1.jpg">
 
 바로 밑에 있는 모든 자식 요소들은 이제 그리드 아이템이 되었습니다.<br/>
 아직까지는 웹 브라우저에서 보여지는 모습은 그리드로 지정하기 전과 별반 다를 것이 없는데<br/>
@@ -103,7 +103,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 150px 의 너비를 가진 세로 열 방향의 트랙들을 생성하였습니다.<br/>
 자식 아이템들은 이제 그리드에 있는 각자의 그리드 쉘 위에 배치됩니다.<br/>
 
-<img src="./../../../image/grid2.jpg">
+<img src="../../../image/grid2.jpg">
 
 <br/><br/>
 
@@ -119,7 +119,7 @@ gridbox 라는 클래스 이름을 가진 div 요소 안에 아홉개의 자식 
 }
 ```
 
-<img src="./../../../image/grid3.jpg" height="70">
+<img src="../../../image/grid3.jpg" height="70">
 
 위에 있는 박스와는 다르게 fr 단위를 사용하였습니다.<br/>
 그리드 컨테이너의 크기가 줄어들거나 늘어남에 따라 자식 아이템들의 크기도<br/>
@@ -197,7 +197,7 @@ fr 단위는 고정된 단위 값과 같이 섞어서 사용할 수도 있습니
 }
 ```
 
-<img src="./../../../image/grid4.jpg" width="400">
+<img src="../../../image/grid4.jpg" width="400">
 
 <br/><br/>
 
@@ -285,7 +285,7 @@ grid-row-end : 행 내의 그리드 항목의 종료위치를 지정합니다.
 }
 ```
 
-<img src="./../../../image/grid5.jpg">
+<img src="../../../image/grid5.jpg">
 
 <br/><br/>
 
@@ -368,7 +368,7 @@ grid-row-end : 행 내의 그리드 항목의 종료위치를 지정합니다.
 }
 ```
 
-<img src="./../../../image/grid6.jpg">
+<img src="../../../image/grid6.jpg">
 
 이렇게 중첩된 그리드는 상위 부모 요소의 그리드와 아무런 관계가 없습니다.<br/>
 
