--- a/JavaScript/2-1.JS_DataType.md
+++ b/JavaScript/2-1.JS_DataType.md
@@ -1,59 +1,72 @@
 # 1. Today I Learned
 
 ## JavaScript Data Type
+
 ---
+
 ## 값의 타입
-앞서 공부했듯이 JavaScript에서 다루어지는 모든 값은 '타입'을 갖고 있습니다.<br/> 
+
+앞서 공부했듯이 JavaScript 에서 다루어지는 모든 값은 '타입'을 갖고 있습니다.<br/>
 값의 종류를 타입이라 하는데요.<br/>
 다음과 같은 종류의 타입이 있습니다.<br/>
+
 * 숫자 (Number)
 * 문자열 (String)
 * 불린 (Boolean)
 * 객체 (Object)
-    - 함수 (Function)
-    - 배열 (Array)
-    - 날짜 (Date)
-    - 정규식 (RegExp)
+  * 함수 (Function)
+  * 배열 (Array)
+  * 날짜 (Date)
+  * 정규식 (RegExp)
 * 널 (Null)
 * 정의되지 않음 (Undefined)<br/><br/>
 
-
 ## 숫자 (Number)
+
 ---
-C언어의 경우 정수냐 실수냐에 따라 <code>int, long, float, double</code>등과 같은 다양한 숫자 타입이 존재하지만,<br/> 자바스크립트는 하나의 숫자형만 존재합니다.<br/>
-자바스크립트에서는 모든 숫자를 64비트 부동 소수점 형태로 저장하기 때문입니다.<br/> 
-이는 C언어의 <code>double</code> 타입과 유사합니다.<br/>
+
+C 언어의 경우 정수냐 실수냐에 따라 <code>int, long, float, double</code>등과 같은 다양한 숫자 타입이 존재하지만,<br/> 자바스크립트는 하나의 숫자형만 존재합니다.<br/>
+자바스크립트에서는 모든 숫자를 64 비트 부동 소수점 형태로 저장하기 때문입니다.<br/>
+이는 C 언어의 <code>double</code> 타입과 유사합니다.<br/>
+
 ```javascript
 var intnum = 10;
 var floatnum = 0.1;
 
-typeof intnum;      // number
-typeof floatnum;    // number
+typeof intnum; // number
+typeof floatnum; // number
 ```
-따라서 <code>var intNum = 10; / var floatNum =0.1;</code> 처럼 var 키워드로 선언된 자바스크립트 변수에는<br/> 
+
+따라서 <code>var intNum = 10; / var floatNum =0.1;</code> 처럼 var 키워드로 선언된 자바스크립트 변수에는<br/>
 정수나 실수 구분 없이 그 값을 바로 저장할 수 있으므로, <code>intNum</code>과 </code>floatNum</code> 변수 모두 <code>typeof</code> 연산자의 결과값이 <code>number</code> 타입임을 확인할 수 있습니다..<br/>
+
 ```javascript
-console.log(5/2);   //  2.5
+console.log(5 / 2); //  2.5
 ```
+
 자바스크립트에서는 정수형이 따로 없고, 모든 숫자를 실수로 처리하므로 나눗셈 연산을 할 때는 주의해야 합니다.
-다음 예제와 같은 연산을 C언어에서 할 경우 5/2는 소수 부분을 버린 2가 출력됩니다.
-반면에 자바스크립트에서는 5와 2가 둘 다 정수가 아닌 실수로 취급되므로 소수 부분까지 출력된 2.5가 결과값이 됩니다.<br/><br/>
+다음 예제와 같은 연산을 C 언어에서 할 경우 5/2 는 소수 부분을 버린 2 가 출력됩니다.
+반면에 자바스크립트에서는 5 와 2 가 둘 다 정수가 아닌 실수로 취급되므로 소수 부분까지 출력된 2.5 가 결과값이 됩니다.<br/><br/>
 
 ## 문자열 (String)
+
 ---
+
 문자열은 작은 따옴표나 큰 따옴표로 생성합니다.<br/>
-자바스크립트에서는 C언어의 char타입과 같이 문자 하나만을 별도로 나타내는 데이터 타입은 존재하지 않습니다.<br/>
-따라서 한 개의 문자를 나타내려면 singleChar 변수같이 길이가 1인 문자열을 사용해야 합니다.<br/>
+자바스크립트에서는 C 언어의 char 타입과 같이 문자 하나만을 별도로 나타내는 데이터 타입은 존재하지 않습니다.<br/>
+따라서 한 개의 문자를 나타내려면 singleChar 변수같이 길이가 1 인 문자열을 사용해야 합니다.<br/>
 주의해야 할 점은 한 번 정의된 문자열은 변하지 않는다는 것입니다.<br/>
+
 ```javascript
 var str = "test";
 
-console.log(str[0], str[1]);        //  t, e
+console.log(str[0], str[1]); //  t, e
 
-str[0]="T";
+str[0] = "T";
 
-console.log(str);                   //  test
+console.log(str); //  test
 ```
+
 문자열은 문자 배열처럼 인덱스를 이용해서 접근할 수 있습니다.<br/>
 따라서 console.log()문에서 str[0], str[1] 등의 값을 각각 출력했을 때, 문자열 첫 글자인 ’t’와 다음 글자인 ‘e’가 각각 출력된 것입니다.<br/>
 그리고 여기서 주목할 점은 예제에서는 str[0]에 ’T’를 넣어서 문자열의 첫 글자를 대문자로 변경했습니다.<br/>
@@ -61,46 +74,55 @@ console.log(str);                   //  test
 즉, 자바스크립트에서는 한 번 생성된 문자열은 읽기만 가능하지 수정은 불가능합니다.<br/><br/>
 
 ## 불린값 (Boolean)
+
 ---
-자바스크립트는 true와 false 값을 나타내는 불린 타입을 가집니다.<br/>
+
+자바스크립트는 true 와 false 값을 나타내는 불린 타입을 가집니다.<br/>
+
 ```javascript
 var boolVar = true;
 
-typeof boolVar;     //  boolean
+typeof boolVar; //  boolean
 ```
-boolVar변수에 ‘true’라는 값을 저장했으므로 boolVar 변수는 boolean타입이 출력된 것입니다.<br/><br/>
 
-## Null과 Undefined
+boolVar 변수에 ‘true’라는 값을 저장했으므로 boolVar 변수는 boolean 타입이 출력된 것입니다.<br/><br/>
+
+## Null 과 Undefined
+
 ---
+
 이 두 타입은 모두 자바스크립트에서 '값이 비어있음’을 나타냅니다.<br/>
-자바스크립트 환경 내에서 기본적으로 값이 할당되지 않은 변수는 undefined 타입이며, undefined 타입의 변수는 변수 자체의 값 또한 undefined입니다.<br/>
+자바스크립트 환경 내에서 기본적으로 값이 할당되지 않은 변수는 undefined 타입이며, undefined 타입의 변수는 변수 자체의 값 또한 undefined 입니다.<br/>
+
 ```javascript
 var emptyVar;
 var nullVar = null;
 
-typeof emptyVar;        //  undefined
-typeof nullVar;         //  object
+typeof emptyVar; //  undefined
+typeof nullVar; //  object
 
-console.log(typeof nullVar === null);       //      false
-console.log(nullVar === null);              //      true
+console.log(typeof nullVar === null); //      false
+console.log(nullVar === null); //      true
 ```
-이처럼 자바스크립트에서 undefined는 타입이자, 값을 나타낸다는 것에 주의해야합니다.<br/>
+
+이처럼 자바스크립트에서 undefined 는 타입이자, 값을 나타낸다는 것에 주의해야합니다.<br/>
 emptyVar 변수에는 아무런 값이 할당되지 않으므로 undefined 타입이 출력된 것입니다.<br/>
 이에 반해 Var nullVar = null;의 nullVar 변수와 같이 null 타입 변수의 경우는 개발자가 명시적으로 값이 비어있음을 나타내는 데 사용합니다.<br/>
-여기서 주의할 점은 null 타입 변수인 nullVar의 typeof 결과가 null이 아니라 object라는 것입니다.<br/>
+여기서 주의할 점은 null 타입 변수인 nullVar 의 typeof 결과가 null 이 아니라 object 라는 것입니다.<br/>
 떄문에 다음 예제와 같이 자바스크립트에서는 null 타입 변수인지를 확인할 때 typeof 연산자를 사용하면 안 되고,
 일치 연산자(===)을 사용해서 변수의 값을 직접 확인해야 합니다.<br/><br/>
 
 > 객체는 공부할 양이 많아 따로 분류해서 만들겠습니다.
 
-
 # 2. Today I Found Out
+
 ```
 HTML강의로 가득찼던 하루였지만 어제 배운 것을 복습할 겸
 살짝 더 깊게 공부하였습니다. 배우면 배울수록 더 깊은게 있어서
 더욱 공부를 열심히 해야할 것 같습니다.
 다시 공부하러 돌아가보겠습니다.
 ```
+
 <br/><br/>
 
 #3. 참고자료
