FDS 3주차 공부-4월 6일

--- a/HTML5/4. HTML5_Tag.md
+++ b/HTML5/4. HTML5_Tag.md
@@ -432,7 +432,7 @@ type 어트리뷰트는 생략 가능합니다.
   | action    | URL        | 입력 데이터(form data)가 전송될 URL 지정 |
   | method    | get / post | 입력 데이터(form data) 전달 방식 지정    |
 
-  GET 과 POST 는 HTTP 프로토콜을 이용해서 사용자 입력 데이터를 서버에 전달하는 방식을 나타내며,<br/>이를 HTTP request method 라 합니다.<br/><br/>
+  GET 과 POST 는 HTTP 티토콜을 이용해서 사용자 입력 데이터를 서버에 전달하는 방식을 나타내며,<br/>이를 HTTP request method 라 합니다.<br/><br/>
 
   ```
   GET
