--- a/JavaScript/2-2.JS_NumberType.md
+++ b/JavaScript/2-2.JS_NumberType.md
@@ -23,7 +23,7 @@
 
 number type 을 확인해 보기 위해서는 앞시간에 공부한 `typeof` 연산을 해보면 됩니다.<br/>
 
-```javasciprt
+```javascript
 typeof 13884284; // 'number'
 ```
 
@@ -115,7 +115,7 @@ console.log(0.1 + 0.2); //      ?
 결론부터 말씀드리면 IEEE 754 표준 중 배정도 부동소수점을 사용하여,<br/>
 계산된 정밀도를 맞추기 위해 나머지 수를 반올림하여 표현하였기 때문입니다.<br/>
 그럼 IEEE 754 를 안쓰면 되지않냐고 생각하시겠지만 IEEE 754 는 컴퓨터에서<br/>
-소수를 표현하는 방식으로 널리 사용되고 있으며, 많은 프로그래밍 언어들이 표준을 따릅니다.<br/>
+소수를 표현하는 방식으로 널리 사용되고 있으며, 많은 티그래밍 언어들이 표준을 따릅니다.<br/>
 그럼 IEEE 754 에서 오차를 왜 그냥 두는지 의아해 하실 수 있는데<br/>
 이는 계산 상의 효율성을 위한 것입니다.<br/>
 컴퓨터의 저장 공간은 한정적이고, 내부적으로는 0 과 1 만 다룰 수 있으므로,<br/>
