FDS 4주차 공부-4월 9일(리터럴, 변수, 식별자 추가)

--- a/JavaScript/2-1.JS_DataType.md
+++ b/JavaScript/2-1.JS_DataType.md
@@ -4,6 +4,104 @@
 
 ---
 
+## 값 다루기 - 값과 리터럴
+
+프로그래밍 언어에서 값을 생성하는 가장 쉬운 방법은 리터럴을 사용하는 것입니다.<br/>
+리터럴은 값의 표기법입니다.<br/>
+
+```javascript
+1; //  정수 리터럴
+2.5; //  부동 소수점 리터럴
+("hello"); // 문자열 리터럴
+true; // 진리값 리터럴
+```
+
+리터럴과 연산자를 이용해 연산을 할 수 있습니다.<br/>
+
+```javascript
+1 + 2; // 더하기(3)
+2 * 3; //  곱하기(6)
+"hello" + "world"; // 문자열 더하기(helloworld)
+true && false; //  진리값 곱하기(false)
+```
+
+<br/>
+
+## 변수
+
+프로그래밍 언어에는 대개 값에 이름을 붙여서 다시 쓸 수 있게 만드는 기능이 있습니다.<br/>
+JS 에서는 여러가지 방법을 이용해 값에 이름을 붙일 수 있습니다.<br/>
+
+1.  `var`의 사용
+
+지금은 사용하지 않도록 하는 변수 선언 키워드입니다.<br/>
+var 는 let 과 const 와는 다르게 굉장히 너그러운(?) 키워드입니다.<br/>
+var 는 같은 이름의 변수의 선언도 가능하고, 값의 재대입도 가능합니다.<br/>
+굉장히 너그러워서 간혹 변수의 값을 고정하여 변하지 않게 하여야 하는데<br/>
+협업자의 실수 및 개인의 실수로 재대입을 하여 말썽을 피우기도 합니다.<br/>
+또한 유효범위가 함수단위이기에 scope 관련 문제가 발생하기도 합니다.<br/>
+
+```javascript
+var i = 30;
+i = 40; // 값의 재대입도 가능합니다.
+var i = 50; //  같은 변수의 이름으로 선언도 문제없습니다.
+
+console.log(i); //  50
+```
+
+2.  `let`의 사용
+
+ES6 에서 새롭게 등장하는 let 은 var 처럼 값의 재대입은 가능하나 같은 변수명으로 선언이 불가합니다.<br/>
+또한 범위가 블록단위이기에 var 를 사용할 때 scope 문제가 생기는 것을 방지할 수 있습니다.<br/>
+
+```javascript
+let a = 30;
+a = 40; // 값의 재대입이 가능합니다.
+let a = 50; // 같은 변수의 이름으로 선언은 불가합니다 (error)
+
+console.log(a); //  40
+```
+
+3.  `const`의 사용
+
+ES6 에서 새롭게 등장하는 const 는 상수입니다.<br/>
+변하지 않는 수라는 특징답게 값의 재대입, 같은 변수명의 선언이 불가합니다.<br/>
+그렇기에 선언을 할 때 값을 꼭 대입시켜줘야 합니다.<br/>
+가급적 const 를 사용하는 것을 권장합니다.<br/>
+
+```javascript
+const b = 30;
+b = 50; //  값의 재대입이 불가합니다.
+const b = 70; // 같은 변수명의 선언 또한 불가합니다.
+
+console.log(b); // 30
+```
+
+!! let 보다 const 를 사용하는 것이 좋습니다. 단, 재대입이 필요한 경우는 let 을 쓰도록 합니다.!!
+
+<br/>
+
+## 식별자
+
+변수의 이름을 식별자라고 합니다.<br/>
+식별자를 생성할 때는 다음과 같은 규칙을 따라야 합니다.<br/>
+
+* 숫자, 알파벳, 달러 문자, 언더스코어가 포함될 수 있다.
+* 단, 숫자로 시작되어는 안된다.
+* 예약어는 식별자가 될 수 없다.
+
+```javascript
+const foo;  // 가능합니다.
+const _foo; //  가능합니다.
+const $;  //  가능합니다. (jQuery에서 사용합니다.)
+const 7seven; //  불가합니다. 숫자는 앞에 올 수 없습니다.
+const const;  //  불가합니다. 예약어는 사용할 수 없습니다.
+```
+
+!--예약어란? JS 에서 언어의 기능을 위해 미리 예약해둔 언어를 말합니다.(ex: const, let, function...)--!
+
+<br/><br/>
+
 ## 값의 타입
 
 앞서 공부했듯이 JavaScript 에서 다루어지는 모든 값은 '타입'을 갖고 있습니다.<br/>
