FDS 4주차 공부-4월 10일

--- a/JavaScript/1.JS_Basic_Tutorial.md
+++ b/JavaScript/1.JS_Basic_Tutorial.md
@@ -91,7 +91,7 @@ typeof undefined; // 'undefined'
 
 <br/><br/>
 
-## 표현식과 연산자
+## 식과 연산자
 
 표현식이란 JavsScript 문장의 구성요소를 구분하는 하나의 단위로, 값으로 변환될 수 있는 부분을 가리킵니다.<br/>
 
