--- a/JavaScript/2-1.JS_DataType.md
+++ b/JavaScript/2-1.JS_DataType.md
@@ -150,7 +150,7 @@ console.log(5 / 2); //  2.5
 
 ---
 
-문자열은 작은 따옴표나 큰 따옴표로 생성합니다.<br/>
+문자열은 작은 따옴식나 큰 따옴표로 생성합니다.<br/>
 자바스크립트에서는 C 언어의 char 타입과 같이 문자 하나만을 별도로 나타내는 데이터 타입은 존재하지 않습니다.<br/>
 따라서 한 개의 문자를 나타내려면 singleChar 변수같이 길이가 1 인 문자열을 사용해야 합니다.<br/>
 주의해야 할 점은 한 번 정의된 문자열은 변하지 않는다는 것입니다.<br/>
