--- a/JavaScript/2-3.JS_StringType.md
+++ b/JavaScript/2-3.JS_StringType.md
@@ -23,6 +23,27 @@ console.log(내나이는); //  29
 
 <br/><br/>
 
+## ASCII, UTF-8, UTF-16
+
+유니코드란? 전 세계의 모든 문자를 일관되게 표현하고 다룰 수 있도록 산업 표준으로<br/>
+문자 집합, 문자 인코딩, 문자 정보 데이터베이스, 문자들을 다루기 위한 알고리즘을 포함하고 있으며<br/>
+유니코드는 값을 나타내기 위해 코드 포인트를 사용합니다.<br/>
+
+* ASCII : 1byte 의 메모리 공간을 활용해 256 가지의 문자를 표현할 수 있는 문자 표현 방식입니다. (영미권에서 주로 사용합니다.)
+* UTF-8 : UTF-8 또한 유니코드를 표현하는 인코딩 방식입니다.
+* UTF-16 : 유니코드 코드포인트를 그대로 메모리에 저장하는 인코딩 방식입니다.
+
+그렇다면 UTF-8 과 UTF-16 의 차이는?<br/>
+
+* 기본적인 차이는 문자 하나를 표현할 때 사용할 최소 byte 를 의미한다고 볼 수 있습니다.<br/>
+  UTF-8 은 경우에 따라 1~4byte, UTF-16 은 2byte,4byte 만큼 필요합니다.<br/>
+  최적의 상황이 필요하다면 어떤 codepoint 를 주로 사용하느냐에 따라 선택하는 기준이 다릅니다.<br/>
+  저장, 통신 용량을 고려하지 않는다면 UTF-8 이 좋고, 용량이 민김하다면 UTF-8 과 UTF-16 에서 고민해야합니다.<br/>
+  영문자들로 가득찬 문서의 경우 UTF-8 로 표현하면 대부분 1byte 로 표현되고 UTF-16 으로 표현하면 2byte 로 표현되니 UTF-8 이 유리하고,<br/>
+  한글의 경우 UTF-8 은 3byte, UTF-16 은 2byte 로 표현되니 UTF-16 이 유리합니다.<br/>
+
+<br/><br/>
+
 ## 문자열 리터럴 (String Type Literal)
 
 ```javascript
@@ -136,7 +157,7 @@ console.log("\u{1F435}"); //  이모티콘
 [..."pizza"]; //    ['p','i','z','z','a']
 ```
 
-유니코드 코드포인트 비교는 사전순 비교가 아니므로 주의가 필요합니다.<br/>
+유니코드 코드포인트 비교는 사전순 비교가 아니므로 주의가 필요합니다.(가급적 사용하지 않는게 좋습니다.)<br/>
 사전순으로 비교하고 싶을 때는 `localeCompare`메소드를 사용해야 합니다.<br/>
 
 ```javascript
@@ -157,7 +178,7 @@ console.log("\u{1F435}"); //  이모티콘
 
 ```javascript
 // 문자열의 길이
-"hi".lengthl; //  2 - 기존과 동일
+"hi".length; //  2 - 기존과 동일
 
 // 여러 문자열 연결하기
 "hi".concat("fun", "javascript"); //  'hifunjavascript'
@@ -169,7 +190,7 @@ console.log("\u{1F435}"); //  이모티콘
 "hi there".includes("hi"); //  true
 "hi there".startsWith("h"); //  true
 "hi there".endsWith("ere"); //  true
-"hi there".search("there"); //  3 (해당하는 문자열이 찾으려고 하는 대상에 몇 번째 문자열인지 찾아줍니다.)
+"hi there".search("there"); //  3 (해당하는 문자열이 찾으려고 하는 대상에 몇 번째 문자열인지 찾아줍니다.) = indexOf();
 
 // 문자열의 특정 부분 바꾸기
 "hi there".replace("there", "gh school"); //  'high school'
@@ -177,12 +198,22 @@ console.log("\u{1F435}"); //  이모티콘
 // 문자열의 일부를 얻어오기
 "pizza".slice(2, 4); //  'zz' (2번째 문자열부터 4번째전까지 슬라이스를 합니다, 단 시작하는 문자열은 0부터 넘버링이 됩니다.)
 
-// 좌우 공백문자 제거하기
+// 좌우 공백문자 제거한 새 문자열 생성하기
 "    hi     ".trim(); //  'hi'
+"    hi     ".trimLeft(); //  'hi      '
+"    hi     ".trimRight(); //  '     hi'
+
+// 좌우 공백문자를 추가한 새 문자열 생성하기
+"hi".padStart(8); //  '      hi'
+"hi".padEnd(8); //  'hi      '
 
 // 문자열을 특정 문자를 기준으로 잘라 배열로 바꾸기
 "i2like2pizza".split("2"); //  ['i', 'like', 'pizza']
 "note-book".split(""); //  ['n','o','t','e','-','b','o','o','k']
+
+// 모든 문자를 소문자 혹은 대문자로 변환한 새 문자열 만들기
+"hi hello javascript".toUpperCase(); //  'HI HELLO JAVASCRIPT'
+"HI HELLO JAVASCRIPT".toLowerCase(); //  'hi hello javascript'
 ```
 
 <br/><br/>
