--- a/JavaScript/2-6.JS_Function.md
+++ b/JavaScript/2-6.JS_Function.md
@@ -30,14 +30,14 @@ function 함수명 (파라미터) {
 ```
 
 JS 의 함수기능을 이용하여 sum 이라는 함수를 작성하였습니다.<br/>
-괄호 안에 a, b 를 매개변수(parameter)라고 하며, return 뒤에 오는 값을 반환값(return value)라고 합니다.<br/>
+괄호 안에 a, b 를 매개변수(인자, parameter)라고 하며, return 뒤에 오는 값을 반환값(return value)라고 합니다.<br/>
 함수를 정의했다면, 함수를 실행하기 위해서는 호출(function call)을 해야합니다.<br/>
 
 ```javascript
 sum(2, 3); // 5
 ```
 
-함수명 뒤에 인자(argument)로 계산하고자 하는 값을 넣어 호출을 하여 함수를 실행하고 실행결과에 해당하는 반환값을 받습니다.<br/>
+함수명 뒤에 인수(argument)라는 계산하고자 하는 값을 넣어 호출을 하여 함수를 실행하고 실행결과에 해당하는 반환값을 받습니다.<br/>
 이 것이 함수의 호출입니다.<br/>
 
 <br/><br/>
@@ -54,22 +54,22 @@ function multiply(a, b) {
   return a * b; // (3) - 함수의 실행
 }
 
-let result = multiply(23, 34); // (2) - 함수의 호출
+let result = multiply(23, 34); // (2) - 함수의 호출 / (4) - 함수의 실행결과를 변수 result에 대입
 
-console.log(result); // (4) - 나머지 구문 실행
+console.log(result); // (5) - 나머지 구문 실행
 ```
 
 함수는 절대 정의하는 것만으로 실행되지 않는 점 꼭 유의해야 합니다.
 
 <br/><br/>
 
-## 매개변수와 인자
+## 매개변수와 인수
 
 위의 함수의 a, b 를 매개변수라고 합니다.<br/>
-매개변수는 변수의 일종으로 함수의 호출시마다 인자가 매개변수의 값으로 대입됩니다.<br/>
+매개변수는 변수의 일종으로 함수의 호출시마다 인수가 매개변수의 값으로 대입됩니다.<br/>
 위의 코드에서 multiply(23, 34)와 같이 호출을 하면 매개변수에는 a = 23, b = 34 의 값이 대입되고 나머지 코드가 실행됩니다.<br/>
-함수를 호출할 때에도 반드시 인자의 값이 매개변수로 들어가는 것이기에, 함수의 인자값을 적어줘야합니다.<br/>
-인자에 변수를 써주고, 매개변수에 새로운 값을 대입해도 인자로 써준 변수의 값은 변경되지 않습니다.<br/>
+함수를 호출할 때에도 반드시 인수의 값이 매개변수로 들어가는 것이기에, 함수의 인수값을 적어줘야합니다.<br/>
+인수에 변수를 써주고, 매개변수에 새로운 값을 대입해도 인수로 써준 변수의 값은 변경되지 않습니다.<br/>
 
 ```javascript
 function test(b) {
@@ -78,7 +78,7 @@ function test(b) {
 }
 
 const a = 1;
-const testresult = test(a);
+const testresult = test(a); // a라는 변수에 있는 값인 1이 함수의 매개변수로 들어가는 것이므로, 에러가 발생하지 않습니다.
 
 console.log(a); // 1
 console.log(testresult); // 3
@@ -192,10 +192,10 @@ function multiply2(x) {
   return multiply(x);
 }
 
-multiply2(3); //  6
+multiply2(3);
 
 function multiply(x) {
-  return two * x; // ReferenceError: two is not defined
+  return two * x; // ReferenceError: two is not defined - two는 함수 multiply2에서만 유효하기 때문입니다.
 }
 ```
 
@@ -464,9 +464,24 @@ function sum(a, b) {
 
 // 함수를 인수로 넘겨보기
 function isOdd(x) {
-  return x % 2 === 1;
+  return x % 2 === 1; // x를 2로 나눴을때 나머지가 1이면 true, 아니면 false 반환
 }
 [1, 2, 3, 4, 5].filter(isOdd); // [1,3,5]
+
+// 함수를 인수로 넘기는 예 - 콜백함수
+function one() {
+  return 1;
+}
+
+var two = function() {
+  return 2;
+};
+
+function add_one_two(a, b) {
+  return a + b;
+}
+
+add_one_two(one(), two());
 
 // 함수에서 함수 반환해보기
 function createEmptyFunc() {
@@ -478,7 +493,7 @@ function createEmptyFunc() {
 값으로 사용할 수 있는 JS 함수는 1 급 함수입니다.<br/>
 
 1.  함수를 변수나 데이터에 할당할수 있으며,
-2.  함수를 인자로 전달할 수 있고,
+2.  함수를 인수로 전달할 수 있고,
 3.  함수를 리턴 할 수 있기 떄문입니다.
 
 이러한 1 급 함수의 특징을 가지고 여러 가지 프로그래밍 기법으로 활용할 수 있습니다.<br/>
