FDS 4주차 공부-4월 12일

--- a/JavaScript/2-6.JS_Function.md
+++ b/JavaScript/2-6.JS_Function.md
@@ -490,13 +490,13 @@ function createEmptyFunc() {
 }
 ```
 
-값으로 사용할 수 있는 JS 함수는 1 급 함수입니다.<br/>
+값으로 사용할 수 있는 JS 함수는 1 급 객체입니다.<br/>
 
 1.  함수를 변수나 데이터에 할당할수 있으며,
 2.  함수를 인수로 전달할 수 있고,
 3.  함수를 리턴 할 수 있기 떄문입니다.
 
-이러한 1 급 함수의 특징을 가지고 여러 가지 프로그래밍 기법으로 활용할 수 있습니다.<br/>
+이러한 1 급 객체의 특징을 가지고 여러 가지 프로그래밍 기법으로 활용할 수 있습니다.<br/>
 
 <br/><br/>
 
