--- a/JavaScript/2-8.JS_Object.md
+++ b/JavaScript/2-8.JS_Object.md
@@ -234,7 +234,7 @@ favoriteFood.apply(info, ["떡볶이"]);
 
 <br/><br/>
 
-## 프로토 타입
+## 프로토타입
 
 JS 에서는 객체 간에 공유되어야 하는 속성과 메소드를 프로토타입이라는 기능을 이용해서 효율적으로 저장할 수 있습니다.<br/>
 어떤 객체에 프로토타입을 지정하면, 프로토타입의 속성을 해당 객체에서 재사용할 수 있습니다.<br/>
@@ -263,9 +263,316 @@ day1.suggest === day2.suggest;
 위의 경우를 `lunchMenuPrototype은 day1의 프로토타입이다.` 혹은 `day1 객체는 lunchMenuPrototype 객체를 상속받았다`고 표현합니다.<br/>
 프로토타입 상속은 다른 언어에서는 흔히 찾아볼 수 없는 JS 의 특징적인 기능입니다.<br/>
 
-> 오늘은 여기까지 내일 이어서 공부하겠습니다.
+<br/><br/>
+
+## 프로토타입 읽고 쓰기
+
+어떤 객체의 프로토타입을 읽어오기 위해 `Object.getPrototypeOf` 함수를 사용할 수 있습니다.<br/>
+또한 `Object.setPrototypeOf` 함수를 통해 이미 생성된 객체의 프로토타입을 변경할 수 있습니다.<br/>
+(`Object.setPrototypeOf` 함수는 null(null 도 객체이기 때문) 또는 또 다른 객체에 특정 객체의 프로토타입을 설정할 수 있게 해줍니다.)<br/>
+하지만 객체가 생성된 이후에 프로토타입을 변경하는 작업은 굉장히 느리므로, Object.setPrototypeOf 함수의 사용은 피하는게 좋습니다.<br/>
+
+```js
+const moong2 = {
+  firstName: "lee"
+};
+
+const moong2child = Object.create(moong2);
+
+Object.getPrototypeOf(moong2child) === moong2; //  true
+
+const newMoong2 = {
+  firstName: "bang"
+};
+
+Object.setPrototypeOf(moong2child, newMoong2);
+Object.getPrototypeOf(moong2child) === moong2; // false (Object.getPrototypeOf(moong2child)는 {firstName: "bang"}이 되었기 때문입니다.)
+```
+
+객체 리터럴을 통해 생성된 객체의 프로토 타입에는 자동으로 `Object.prototype`이 지정됩니다.<br/>
+
+```js
+const empty = {};
+Object.getPrototypeOf(empty) === Object.prototype; //  true
+```
 
 <br/><br/>
+
+## 프로토타입 체인(prototype chain)
+
+```js
+const parent = {
+  a: 1
+};
+
+const child = {
+  b: 2
+};
+
+Object.setPrototypeOf(child, parent);
+console.log(child); //  {b:2}
+console.log(child.a); //  1
+```
+
+console.log(child)의 결과로 {a:1}이 나올줄 알았는데 결과는 {b:2}가 나왔습니다.<br/>
+child 객체에 a 속성이 없는걸까 하고 child 객체의 a 속성을 출력해보면 1 이라는 결과가 나옵니다.<br/>
+child.a 와 같이 JS 객체의 속성에 접근하면, JS 엔진은 child.a 의 속성만 확인하는 것이 아니라 프로토타입 객체의 속성까지 확인합니다.<br/>
+그래서 프로토타입에 해당 이름을 갖는 속성이 있다면 그 속성의 값을 반환합니다.<br/>
+만약 프로토타입의 객체에도 해당 이름의 속성이 없다면 프로토타입의 객체도 객체이므로 프로토타입의 프로토타입에 해당 이름의 속성이 있는지 확인합니다.<br/>
+이렇게 계속 이어져 있는 프로토타입의 연쇄를 프로토타입 체인이라고 합니다.<br/>
+이렇게 연쇄적으로 확인하여 최상위 프로토타입까지 확인하였을 떄 그때도 찾지 못한다면 그제서야 속성값으로 undefined 를 반환합니다.<br/>
+JS 엔진은 속성 접근자를 통해 어떤 객체의 속성을 확인할 떄 프로토타입 체인을 전부 확인합니다.<br/>
+
+```js
+const obj1 = {
+  a: 1
+};
+
+const obj2 = {
+  b: 2
+};
+
+const obj3 = {
+  c: 3
+};
+
+// obj1을 obj2에게 상속, obj2를 obj3에게 상속
+Object.setPrototypeOf(obj2, obj1);
+Object.setPrototypeOf(obj3, obj2);
+
+console.log(obj3.a); //  1 : obj3의 프로토타입(obj2)의 프로토타입(obj1)의 존재하는 속성 a의 값을 출력
+console.log(obj3.b); //  2 : obj3의 프로토타입(obj2)의 존재하는 속성 b의 값을 출력
+console.log(obj3.c); //  3 : obj3의 속성 c의 값을 출력
+```
+
+프로토타입 체인은 눈에 명확하게 보이지 않지만, 객체의 속성에 접근할 때마다 탐색됩니다.<br/>
+따라서 프로토타입 체인의 깊이가 너무 깊으면 속성의 읽기 속도에 영향을 미치므로 주의해야 합니다.<br/>
+어떤 객체가 다른 객체의 프로토타입으로 존재하는지 확인하기 위해서 `Object.prototype.isPrototypeOf` 메소드를 사용할 수 있습니다.<br/>
+
+```js
+obj1.isPrototypeOf(obj3); //  true
+obj2.isPrototypeOf(obj3); //  true
+```
+
+<br/><br/>
+
+## 프로토타입 체인의 끝
+
+속성에 접근할 때 더이상 프로토타입이 없을 떄까지 프로토타입 체인을 확인한다고 했는데 프로토타입이 더 이상 없다는 것이 무슨말일까요?<br/>
+앞에서 말씀드린 것처럼 JS 에서는 객체의 프로토타입으로 객체 또는 null 이외의 값을 지정할 수 없습니다.<br/>
+지정하려고 하면 에러가 발생하거나 무시됩니다.<br/>
+
+```js
+Object.create(22); // Uncaught TypeError : Object prototype may only be an Object or null
+```
+
+그리고 Object.prototype 의 프로토타입을 확인해보면 null 이 나옵니다.<br/>
+
+```js
+Object.getPrototypeOf(Object.prototype); //  null
+```
+
+결국, 프로토타입 체인을 따라가다 보면 언젠가는 null 을 만난다는 결론에 도달하게 됩니다.<br/>
+프로토타입을 명시적으로 null 로 지정하지 않아도, 언젠가는 Object.prototype, 즉 프로토타입이 null 인 객체를 만나게 됩니다.<br/>
+이 때에 프로토타입 체인을 확인하는 과정이 끝나는 것입니다.<br/><br/>
+
+<img src="./../image/Object_prototype.jpg" width="500">
+
+<br/><br/>
+
+## 프로토타입 체인 - 속성가리기 (property shadowing)
+
+만약 프토토타입 체인에서 같은 이름의 속성이 여러 번 등장한다면 어떻게 될까요?<br/>
+
+```js
+const parent = {
+  a: 1
+};
+
+const child = {
+  a: 3
+};
+
+Object.setPrototypeOf(child, parent);
+
+child.a; //  3
+```
+
+parent 에 같은 이름의 속성이 있음에도 불구하고, child.a 에 접근하면 프로토타입 체인에서 가장 먼저 만나는 값이 불려와집니다.<br/>
+이렇게 프로토타입 체인의 상위에 있는 속성이 하위 속성에 의해 가려지는 현상을 속성 가리기라고 합니다.<br/>
+<br/>
+그렇다면 child 를 통해 parent 의 속성을 변경하거나 삭제할수 있을까요?( = 프로토타입의 객체 속성을 변경하거나 삭제할 수 있을까요?)<br/>
+
+```js
+const parent = {
+  do: "something"
+};
+
+const child = Object.create(parent);
+
+delete child.do; // child.do 삭제
+parent.do; //  'something'
+
+child.do = "rest";
+parent.do; //  'something'
+child.do; //  'rest'
+```
+
+이처럼 어떤 객체의 속성을 변경하거나 속성을 삭제하는 작업은 그 객체의 프로토타입에 아무런 영향을 미치지 않습니다.<br/>
+
+<br/><br/>
+
+## 생성자 (constructor)
+
+지금까지는 객체를 생성하기 위해 객채 리터럴({}) 또는 Object.create 함수를 사용했습니다.<br/>
+하지만 이 것말고도 한 가지 방법이 더 있는데, 바로 new 키워드를 이용하는 것입니다.<br/>
+
+```js
+const obj = new Object();
+```
+
+위 문장은 new 키워드가 붙었다는 것 말고는 함수 호출 문법과 비슷하게 생겼습니다.
+
+```js
+typeof Object; //  function
+```
+
+사실 Object 는 함수입니다. 이렇게 객체를 만들 때, new 키워드와 함께 사용되는 함수를 가지고 생성자 혹은 생성자 함수라고 합니다.<br/>
+
+<br/><br/>
+
+## 생성자 정의하기
+
+JS 에서는 Object 뿐만 아니라, 내장된 많은 생성자들이 있고, 심지어 직접 생성자를 만들 수도 있습니다.<br/>
+
+```js
+// 생성자 정의
+function Lunch(menu) {
+  this.menu = menu;
+}
+
+// 생성자를 통한 객체 생성
+const todaylunch = new Lunch("회덮밥");
+```
+
+function 구문을 통해 lunch 라는 생성자를 정의하고, 생성자 안에서 this 라는 키워드를 사용해서,<br/>
+새로 만들어질 객체의 속성을 지정하였습니다. new 키워드를 이용해서 객체를 생성하는 순간에 생성자 안에<br/>
+있는 코드가 실행되어 객체의 속성이 지정되는 것입니다.<br/>
+생성자의 이름으로는 식별자로 사용할 수 있는 것이면 뭐든지 사용할 수 있지만,<br/>
+변수와는 다르게 대문자로 시작하게끔 짓는 것이 널리 사용되는 관례입니다.<br/>
+
+## 인스턴스
+
+생성자를 통해 생성된 객체를 그 생성자의 인스턴스라고 합니다.<br/>
+instanceof 연산자를 사용하면 객체가 특정 생성자의 인스턴스가 맞는지를 확인할 수 있습니다.<br/>
+
+```js
+todaylunch instanceof Lunch; //  true
+```
+
+객체 리터럴을 통해 생성된 객체는 Object 의 인스턴스입니다.<br/>
+
+```js
+const empty = {};
+empty instanceof Object; //  true
+```
+
+<br/><br/>
+
+## 셍성자와 프로토타입
+
+생성자에 관련하여 알아야 할 것이 더 있는데 바로 생성자의 `prototype` 이라는 속성입니다.<br/>
+생성자를 통해 만들어낸 객체의 프로토타입에는 생성자의 prototype 속성에 저장되어 있는 객체가 자동으로 지정됩니다.<br/>
+
+```js
+Object.getPrototypeOf(todaylunch) === Lunch.prototype; //  true
+```
+
+Lunch.prototype 에 객체를 정한 적이 없고 심지어 Lunch 는 함수인데도 불구하고 속성을 갖고 있는데 이유는<br/>
+앞에서도 공부했듯이 먼저 JS 에서는 함수도 특별한 형태의 객체이기 때문입니다.<br/>
+그리고, JS 에서는 function 구문을 통해 함수를 정의할 때 함수의 prototype 속성에 객체가<br/>
+자동으로 생성되어 저장됩니다.<br/>
+prototype은 constructor 가 가지는 속성이며, 함수객체만 이 속성을 가지고 있습니다.
+(여기서 말하는 프로토타입은 **proto**와 다른 prototype property 를 의미하는 것입니다.)
+
+```js
+function Lunch() {
+  // blah blah code~~
+}
+
+typeof Lunch.prototype; // 'object'
+```
+
+<br/><br/>
+
+## 생성자 - constructor
+
+생성자의 prototype 속성에 자동 생성되는 객체에는 constructor 라는 특별한 속성이 들어있습니다.<br/>
+이 속성에는 생성자 자신이 저장됩니다.<br/>
+
+```js
+function Lunch() {
+  // blah blah code~~`
+}
+
+Lunch.prototype.constructor === Lunch; //  true
+```
+
+이를 통해, 어떤 객체가 어떤 생성자로부터 생성되었는지를 constructor 속성을 통해 알아낼 수 있습니다.<br/>
+
+```js
+function Lunch() {
+  // blah blah code~~`
+}
+
+const todayLunch = new Lunch();
+todayLunch.constructor === Lunch; //  true
+```
+
+```js
+// 점심메뉴를 알려주는 객체를 생성하는 함수
+function Lunch(menu) {
+  this.menu = menu;
+}
+
+Lunch.prototype.select = function() {
+  return `오늘 점심 메뉴로 ${this.menu} 어떠신가요?`;
+};
+
+const todayLunch = new Lunch("회덮밥");
+
+todayLunch.select(); // '오늘 점심 메뉴로 회덮밥 어떠신가요?'
+```
+
+<br/><br/>
+
+## 정적 메소드 (static method)
+
+생성자의 속성에 직접 지정된 메소드를 가지고 정적 메소드라고 합니다.<br/>
+`Number.isNaN`, `Object.getPropertyOf` 등의 함수들은 모두 정적 메소드입니다.<br/>
+정적 메소드는 특정 인스턴스에 대한 작업이 아니라, 해당 생성자와 관련된 일반적인 작업을 정의하고 싶을 때 사용됩니다.<br/>
+
+```js
+function Age(age) {
+  this.age = age;
+}
+
+const moong2 = new Age(29);
+const min_ji = new Age(24);
+
+// 생성자의 속성에 함수를 직접 할당합니다.
+Age.compare = function(person1, person2) {
+  if (person1.age > person2.age) {
+    return `첫번째 사람의 나이가 ${person1.age - person2.age}살 더 많습니다.`;
+  } else if (person1.age < person2.age) {
+    return `두번째 사람의 나이가 ${person2.age - person1.age}살 더 많습니다.`;
+  } else {
+    return `두 사람의 나이가 같습니다.`;
+  }
+};
+
+Age.compare(moong2, min_ji);
+```
 
 # 2. Today I Found Out
 
