FDS 4주차 공부-4월 13일

--- a/JavaScript/2-8.JS_Object.md
+++ b/JavaScript/2-8.JS_Object.md
@@ -35,15 +35,13 @@ const moong2 = {
 객체 리터럴을 이용해 속성을 지정할 때, 이미 정의된 변수의 이름을 그대로 속성으로 사용할 수도 있습니다.<br/>
 
 ```js
-const name = "이근환";
-
 const moong2 = {
-  name: name,
+  name: "이근환"
   age: 29
 };
 ```
 
-위 코드를 아래처럼 줄여서 쓸 수도 있습니다.<br/>
+위 코드를 아래처럼 쓸 수도 있습니다.<br/>
 
 ```js
 const name = "이근환";
@@ -52,6 +50,20 @@ const moong2 = {
   name,
   age: 29
 };
+```
+
+객체의 속성과 값이 동일한 경우에는 이렇게 쓰면 됩니다.<br/>
+단, 브라우저에서 지원이 안될수도 있으니 주의해야합니다.<br/>
+
+```js
+let o = {
+  a: a,
+  b: b,
+  c: c
+};
+
+// 이렇게 단축이 됩니다.
+let o = { a, b, c };
 ```
 
 또한 대괄호를 사용해서 다른 변수에 저장된 문자열을 그대로 속성의 이름으로 쓰는 것도 가능합니다.<br/>
@@ -151,6 +163,34 @@ const moong2 = {
 moong2.react(); //  'smile'
 ```
 
+객체 속성 값으로 함수명을 지정하여 사용할 수도 있습니다.<br/>
+
+```js
+function greet() {
+  return "hello";
+}
+
+const person = {
+  greet: greet
+};
+
+person.greet();
+```
+
+위의 코드는 아래와 같습니다.<br/>
+
+```js
+let greet = function() {
+  return "hello";
+};
+
+const person = {
+  greet: greet
+};
+
+person.greet();
+```
+
 <br/><br/>
 
 ## this
@@ -163,7 +203,7 @@ const moong2 = {
   name: "이근환",
   age: 29,
   introduce() {
-    return `안녕하세요 제 이름은 ${name}이에요! 나이는 ${age}살입니다.`;
+    return `안녕하세요 제 이름은 ${this.name}이에요! 나이는 ${this.age}살입니다.`;
   },
   recovery() {
     this.age--;
@@ -492,7 +532,7 @@ Lunch.prototype 에 객체를 정한 적이 없고 심지어 Lunch 는 함수인
 앞에서도 공부했듯이 먼저 JS 에서는 함수도 특별한 형태의 객체이기 때문입니다.<br/>
 그리고, JS 에서는 function 구문을 통해 함수를 정의할 때 함수의 prototype 속성에 객체가<br/>
 자동으로 생성되어 저장됩니다.<br/>
-prototype은 constructor 가 가지는 속성이며, 함수객체만 이 속성을 가지고 있습니다.
+prototype 은 constructor 가 가지는 속성이며, 함수객체만 이 속성을 가지고 있습니다.
 (여기서 말하는 프로토타입은 **proto**와 다른 prototype property 를 의미하는 것입니다.)
 
 ```js
