FDS 5주차 공부-4월 16일

--- a/JavaScript/2-8.JS_Object.md
+++ b/JavaScript/2-8.JS_Object.md
@@ -203,7 +203,9 @@ const moong2 = {
   name: "이근환",
   age: 29,
   introduce() {
-    return `안녕하세요 제 이름은 ${this.name}이에요! 나이는 ${this.age}살입니다.`;
+    return `안녕하세요 제 이름은 ${this.name}이에요! 나이는 ${
+      this.age
+    }살입니다.`;
   },
   recovery() {
     this.age--;
@@ -302,6 +304,16 @@ day1.suggest === day2.suggest;
 이렇게 프로토타입 기능을 이용해 한 객체에서 다른 객체의 기능을 가져와 사용하는 것을 프로토타입 상속이라고 합니다.<br/>
 위의 경우를 `lunchMenuPrototype은 day1의 프로토타입이다.` 혹은 `day1 객체는 lunchMenuPrototype 객체를 상속받았다`고 표현합니다.<br/>
 프로토타입 상속은 다른 언어에서는 흔히 찾아볼 수 없는 JS 의 특징적인 기능입니다.<br/>
+단, 복수개 이상의 부모 프로토타입을 받을수 는 없습니다.<br/>
+하지만 부모의 부모식으로 프로토타입을 받는 것은 가능합니다. (프로토타입 체인)<br/>
+<br/>
+
+<strong>[ 만약 프로토타입을 안쓰고 그냥 배열에 객체를 반복 생성해서 사용한다면? ]</strong><br/>
+
+<br/>
+
+프로토타입을 안쓰고 배열에 객체를 반복 생성할 경우 메모리를 객체가 반복 생성되는 만큼 잡아먹게 될 뿐더러<br/>
+배열,객체,함수 모두 새로생성된 것들은 안의 내용이 같을지라도 다른 것으로 판단됩니다.<br/>
 
 <br/><br/>
 
@@ -459,6 +471,10 @@ child.do; //  'rest'
 ```
 
 이처럼 어떤 객체의 속성을 변경하거나 속성을 삭제하는 작업은 그 객체의 프로토타입에 아무런 영향을 미치지 않습니다.<br/>
+<br/>
+
+<strong>!! [[prototype]]을 끊으려면? !!</strong><br/>
+Object.setPrototypeOf(prototype 을 끊을 대상, null)이라고 하면 됩니다.<br/>
 
 <br/><br/>
 
@@ -572,11 +588,11 @@ todayLunch.constructor === Lunch; //  true
 ```js
 // 점심메뉴를 알려주는 객체를 생성하는 함수
 function Lunch(menu) {
-  this.menu = menu;
+  this.menu = menu; // 개별적으로 저장되어야 하는 것은 생성자를 통해 저장하고
 }
 
 Lunch.prototype.select = function() {
-  return `오늘 점심 메뉴로 ${this.menu} 어떠신가요?`;
+  return `오늘 점심 메뉴로 ${this.menu} 어떠신가요?`; // 공유되어야하는 동작은 프로토타입 속성에 저장합니다.
 };
 
 const todayLunch = new Lunch("회덮밥");
