FDS 5주차 공부-4월 17일~18일

--- a/JavaScript/2-9.JS_Array.md
+++ b/JavaScript/2-9.JS_Array.md
@@ -709,6 +709,8 @@ Array.isArray({}); //  false : 객체
 Array.isArray("hello"); // flase : 문자열
 ```
 
+물론 ([] instanceof Array)를 통해서도 배열을 판별할 수 있으나 여러모로 헛점이 많기에 isArray 메소드를 통해 확인하도록 합니다.<br/>
+
 <br/><br/>
 
 ## 문자열과 배열
