FDS 5주차 공부-4월 21일

--- a/JavaScript/3-3.JS_Functional_Progaramming.md
+++ b/JavaScript/3-3.JS_Functional_Progaramming.md
@@ -148,6 +148,8 @@ me.getAge(); // 30...ㅠㅠ
 화살표 함수 문법을 이용하면, 적은 양의 코드만 사용해서 고차 함수를 만들 수 있습니다.<br/>
 
 ```js
+// const makeAdder = x => (y => x + y);
+// 화살표함수가 여러개가 나온다면 맨 우측에 있는 식부터 계산후 반환이라고 생각하면 됩니다!
 const makeAdder = x => y => x + y;
 
 // 밑의 코드와 위의 한줄과 같습니다.
@@ -159,6 +161,12 @@ const makeAdder = x => y => x + y;
 
 const add2 = makeAdder(2);
 add2(3); //  5
+// makeAdder(2)(3)과 같습니다.
+
+// 번외
+const makeAdder = x => y => z => x + y + z;
+makeAdder(2)(3)(4);
+// 길게 길게 쓸수도 있습니다.
 ```
 
 ```js
