FDS 6주차 공부-4월 27일

--- a/JavaScript/3-7.JS_DOM_API.md
+++ b/JavaScript/3-7.JS_DOM_API.md
@@ -544,6 +544,201 @@ const throwawayNode = d.removeChild(d_nested);
 
 <br/><br/>
 
+## dataset
+
+* `el.dataset` - HTMLElement.dataset 속성은 읽기 또는 쓰기 모드에서 HTML 또는 DOM 의 요소에<br/>
+  설정된 모든 사용자 지정 데이터 특성 (data- \*)에 대한 액세스를 허용합니다.<br/>
+  이것은 DOMString 의 맵이며 각 사용자 정의 데이터 속성에 대해 하나의 항목입니다.<br/>
+  데이터 셋 속성 자체는 읽을 수는 있지만 직접 쓰는 것은 아닙니다.<br/>
+  대신 모든 쓰기는 데이터 속성을 나타내는 '특성'에 있어야합니다.<br/>
+  HTML 데이터 속성과 해당 DOM dataset.property 는 같은 이름을 공유하지 않지만 항상 비슷합니다.<br/>
+
+```html
+// 사용 및 작성 방법
+<div data-index="hello" data-name="moong2" name="hwan"></div>
+```
+
+<br/><br/>
+
+## 노드 간 관계
+
+* `el.childNodes` - Node.childNodes 읽기 전용 속성은 첫 번째 자식 노드에 인덱스 0 이 할당 된 주어진 요소의 자식 노드의 라이브 컬렉션을 반환합니다.<br/>
+* `el.firstChild` - Node.firstChild 읽기 전용 속성은 트리에서 노드의 첫 번째 자식을 반환하거나 노드에 자식이없는 경우 null 을 반환합니다.<br/>
+  노드가 Document 인 경우 직접 자식 목록에서 첫 번째 노드를 반환합니다.<br/>
+* `el.lastChild` - Node.lastChild 읽기 전용 속성은 노드의 마지막 자식을 반환합니다.<br/>
+  상위 요소가 요소이면 하위 요소는 일반적으로 요소 노드, 텍스트 노드 또는 주석 노드입니다. 자식 요소가 없으면 null 을 반환합니다.<br/>
+* `el.previousSibling` - Node.previousSibling 읽기 전용 속성은 부모의 childNodes 목록에서<br/>
+  지정된 노드 바로 앞에있는 노드를 반환하거나 지정된 노드가 해당 목록의 첫 번째 노드이면 null 을 반환합니다.<br/>
+* `el.nextSibling` - Node.nextSibling 읽기 전용 속성은 부모의 childNodes 목록에 지정된 노드<br/>
+  바로 다음에있는 노드를 반환하거나 지정된 노드가 해당 목록의 마지막 노드이면 null 을 반환합니다.<br/>
+* `el.parentNode` - Node.parentNode 읽기 전용 속성은 DOM 트리에서 지정된 노드의 부모를 반환합니다.<br/>
+* `el.offsetParent`- HTMLElement.offsetParent 읽기 전용 속성은 요소를 포함하는 위치에 가장 가까운 (포함 계층에서 가장 가까운) 객체에 대한 참조를 반환합니다.<br/>
+  요소가 배치되지 않은 경우 가장 가까운 테이블, 표 셀 또는 루트 요소 (표준 준수 모드의 html, 기본 렌더링 모드의 본문)가 offsetParent 에 의해 반환됩니다.<br/>
+
+<br/><br/>
+
+## 엘리먼트 크기 및 위치
+
+* `el.getBoundingClientRect()` - Element.getBoundingClientRect () 메소드는 뷰포트를 기준으로 요소의 크기와 위치를 반환합니다.<br/>
+* `el.offsetHeight / el.offsetWidth` - HTMLElement.offsetHeight/offsetWidth 읽기 전용 속성은<br/>
+  수직,수평 패딩과 테두리를 포함한 요소의 높이를 정수로 나타낸 것입니다.<br/>
+* `el.clientHeight / el.clientWidth` - Element.clientHeight/clientWidth 읽기 전용 속성은<br/>
+  CSS 또는 인라인 레이아웃 상자가없는 요소에 대해 0 입니다.<br/>
+  그렇지 않으면 패딩을 포함하여 요소의 내부 높이/폭이 픽셀이지만 수평/수직 스크롤 막대 높이, 테두리 또는 여백은 포함되지 않습니다.<br/>
+* `el.scrollHeight / el.scrollWidth` - Element.scrollHeight/scrollWidth 읽기 전용 속성은 오버플로로 인해<br/>
+  화면에 표시되지 않는 내용을 포함하여 요소 콘텐츠의 높이/너비를 측정 한 것입니다.<br/>
+* `el.offsetTop / el.offsetLeft` - HTMLElement.offsetTop/offsetLeft 읽기 전용 속성은<br/>
+  offsetParent 노드의 맨 위/왼쪽을 기준으로 현재 요소의 거리를 반환합니다.<br/>
+* `el.scrollTop / el.scrollLeft` - Element.scrollTop/scrollLEft 속성은 요소의 내용이 세로/왼쪽으로 스크롤되는 픽셀 수를 가져 오거나 설정합니다.<br/>
+* `el.clientTop / el.clientLeft` - 요소의 위/왼쪽 테두리 너비 (픽셀 단위)입니다. 요소의 정수 속성 인 읽기 전용 속성입니다.<br/>
+
+<br/><br/>
+
+## 이벤트 전파
+
+<img src="./../image/eventphases.jpg" width="500">
+
+* 버블링이 일어나는 이벤트도 있고, 일어나지 않는 이벤트도 있습니다. (submit, focus, blur, change 등)
+
+<br/><br/>
+
+## 이벤트 객체
+
+* `event.target` - 이벤트를 전달한 객체에 대한 참조입니다.<br/>
+  이벤트의 버블 링 또는 캡처 단계에서 이벤트 핸들러가 호출 될 때 event.currentTarget 과 다릅니다.<br/>
+
+```js
+// list 생성
+let ul = document.createElement("ul");
+document.body.appendChild(ul);
+
+let li1 = document.createElement("li");
+let li2 = document.createElement("li");
+ul.appendChild(li1);
+ul.appendChild(li2);
+
+function hide(e) {
+  // e.target은 클릭 된 요소를 참조합니다.
+  // 이것은 이 컨텍스트에서 부모를 참조하는 e.currentTarget과 다릅니다.
+  e.target.style.visibility = "hidden";
+}
+
+// Listener를 목록에 첨부하십시오.
+// 각 li를 클릭하면 실행됩니다.
+ul.addEventListener("click", hide, false);
+```
+
+* `event.currentTarget` - 이벤트가 DOM 을 통과 할 때 이벤트의 현재 대상을 식별합니다.<br/>
+  이벤트가 발생한 요소를 식별하는 event.target 과는 달리 이벤트 핸들러가 연결된 요소를 항상 참조합니다.<br/>
+
+```js
+function hide(e) {
+  e.currentTarget.style.visibility = "hidden";
+  console.log(e.currentTarget);
+  // 이 함수가 이벤트 핸들러로 사용될 때 : this === e.currentTarget
+}
+
+let ps = document.getElementsByTagName("p");
+
+for (let i = 0; i < ps.length; i++) {
+  // 콘솔에서 클릭된 p요소를 출력합니다.
+  ps[i].addEventListener("click", hide, false);
+}
+// body 추력
+document.body.addEventListener("click", hide, false);
+
+// 주위를 클릭하면 단락을 사라지게합니다.
+```
+
+* `event.stopPropagation()` - 캡처 및 버블 링 단계에서 현재 이벤트의 추가 전파를 방지합니다.
+
+```js
+// 사용 방법 - 사용할 이벤트의 메소드처럼 사용하도록 합니다.
+event.stopPropagation();
+```
+
+* `event.preventDefault()` - 이벤트 인터페이스의 preventDefault () 메서드는 사용자 에이전트에게<br/>
+  이벤트가 명시적으로 처리되지 않으면 기본 동작을 정상적으로 수행해서는 안됩니다.<br/>
+  해당 이벤트 리스너 중 하나가 stopPropagation () 또는 stopImmediatePropagation ()을<br/>
+  호출하지 않는 한 이벤트는 평소와 같이 전파를 계속하며,이 중 하나는 전달을 즉시 중단합니다.<br/>
+
+```js
+function checkName(evt) {
+  var charCode = evt.charCode;
+  if (charCode != 0) {
+    if (charCode < 97 || charCode > 122) {
+      evt.preventDefault();
+      displayWarning(
+        "Please use lowercase letters only." +
+          "\n" +
+          "charCode: " +
+          charCode +
+          "\n"
+      );
+    }
+  }
+}
+```
+
+<br/><br/>
+
+## 폼 이벤트
+
+* `change` - 폼의 값이 변경될때마다 발생하는 이벤트입니다.
+
+```js
+// 사용 방법
+document.querySelector("select").addEventListener("change", e => {
+  alert(e.target.value);
+});
+```
+
+* `input` - 텍스트 필드에 거는 이벤트로 한글자가 입력될 때마다 일어나는 이벤트입니다.
+
+```js
+// 사용 방법
+document.querySelector(".name").addEventListener("input", e => {
+  document.querySelector(".named").textContent = e.target.value;
+});
+```
+
+* `focus` - 포커스가 특정엘리먼트에 도달했을 때 발생하는 이벤트입니다.
+
+```js
+nameEl.addEventListener("focus", e => {
+  console.log("focus");
+});
+```
+
+* `blur` - 특정엘리먼트에 포커스되었던 것이 빠져나올 때 발생하는 이벤트입니다. (focus 의 반대되는 역할)
+
+```js
+nameEl.addEventListener("blur", e => {
+  console.log("blur");
+});
+```
+
+* `submit` -
+
+```html
+<!--
+ 과거에는 html에서 type 어트리뷰트로 submitd을 통해 전송했으나
+ 전송과 동시에 새로고침 혹은 주소변경되는 이슈로 최근에는 쓰지 않는다.-->
+<input type="submit" value="전송">
+```
+
+```js
+// 대신 submit 이벤트를 사용한다.
+const formEl = document.querySelector("form");
+formEl.addEventListener("submit", e => {
+  e.preventDefault();
+  alert(e.target.elements.gender.value);
+  alert(e.target.elements.name.value);
+});
+```
+
+<br/><br/>
+
 # 2. Today I Found Out
 
 ```
