--- a/JavaScript/4-2.JS_Class.md
+++ b/JavaScript/4-2.JS_Class.md
@@ -470,3 +470,23 @@ const student = new Student();
 <img src="./../image/class-inherit.jpg" width="500">
 
 <br/><br/>
+
+# 2. Today I Found Out
+
+```
+자바에만 class가 있는 줄 알았는데 JS에서도 class가 있어서 신기했습니다.
+클래스가 왜 생겼을까라는 의문을 가지고 공부를 시작했는데
+공부를 하면서 생성자를 이용할때보다 클래스를 써서 생성하는 것이
+더 이해가 수월했고, 코드가 간결해진 것 같아서 좋았습니다.
+또한 상속이라는 부분이 정말 리액트에 점점 다가가고 있는 것같아서
+너무 좋았습니다.
+아직 얇게 봐서 조금 더 공부를 해야겠습니다.
+```
+
+<br/><br/>
+
+# 3. refer
+
+> http://poiemaweb.com/es6-class
+
+> https://helloworldjavascript.net/pages/270-class.html#fn_1
