FDS 8주차 공부-5월 8일

--- a/JavaScript/3-7.JS_DOM_API.md
+++ b/JavaScript/3-7.JS_DOM_API.md
@@ -718,7 +718,12 @@ nameEl.addEventListener("blur", e => {
 });
 ```
 
-* `submit` -
+* `submit` - 제출 이벤트는 양식이 제출되면 시작됩니다.<br/>
+  submit 은 button 또는 submit 입력이 아닌 form 요소에서만 시작됩니다.<br/>
+  폼에서는 Enter 를 치면 전송이 되는 기능이 있습니다.<br/>
+  이는 편리할 수도 있지만 거추장스러울 수도 있습니다.<br/>
+  Enter 를 눌렀을 때 제출이 안되게 하고 싶다면 키보드 이벤트를 이용하여 엔터키를 눌렀을 때,<br/>
+  preventDefault()를 이용하여 이벤트가 발생안되게 하면 됩니다.<br/>
 
 ```html
 <!--
@@ -734,6 +739,123 @@ formEl.addEventListener("submit", e => {
   e.preventDefault();
   alert(e.target.elements.gender.value);
   alert(e.target.elements.name.value);
+});
+```
+
+<br/><br/>
+
+## 마우스 이벤트
+
+* `click / dblclick` - click 이벤트는 포인팅 장치 버튼 (일반적으로 마우스의 기본 버튼)이 단일 요소에서 한 번/두 번 클릭 될 때 발생합니다.
+
+```js
+document.querySelector("a").addEventListener("click", e => {
+  alert("링크가 클릭되었습니다.");
+  e.preventDefault();
+});
+```
+
+* `mouseover / mouseout` - mouseover/mouseout 이벤트는 포인팅 장치를 수신기가 연결된 요소 위로 이동하거나 해당 자식 중 하나 위로 이동하면/벗어나면 시작됩니다.
+
+```js
+const boxEl = document.querySelector(".box");
+boxEl.addEventListener("mouseover", e => {
+  console.log("mouseover");
+});
+boxEl.addEventListener("mouseout", e => {
+  console.log("mouseout");
+});
+```
+
+* `mousedown / mouseup` - mousedown 이벤트는 요소에서 포인팅 장치 버튼을 누르면/놓이면 시작됩니다.
+
+```js
+// 드래그 앤 드롭을 구현하고자 할 때 mousedown / mouseup을 씁니다.
+const boxEl = document.querySelector(".box");
+boxEl.addEventListener("mousedown", e => {
+  console.log("mousedown");
+});
+boxEl.addEventListener("mouseup", e => {
+  console.log("mouseup");
+});
+```
+
+* `mousemove` - mousemove 이벤트는 포인팅 장치 (일반적으로 마우스)가 요소 위로 이동 될 때 발생합니다.
+
+```js
+// 요소위에서 조금이라도 움직이면 mousemove는 발생합니다.
+let count = 0;
+boxEl.addEventListener("mousemove", e => {
+  console.log(`mousemove : ${count++}`);
+});
+```
+
+[mousedown, mouseup, mousemove 를 이용한 drag&drop 구현]
+
+```js
+const boxEl = document.querySelector(".box");
+
+let dragging = false;
+let originalOffset;
+let originalMousePos;
+
+document.addEventListener("mousemove", e => {
+  if (dragging) {
+    const newTop = `${originalOffset.top + (e.clientY - originalMousePos.y)}px`;
+    const newLeft = `${originalOffset.left +
+      (e.clientX - originalMousePos.x)}px`;
+    boxEl.style.top = newTop;
+    boxEl.style.left = newLeft;
+  }
+  console.log(`x:${e.clientX}, y:${e.clientY}`);
+});
+
+boxEl.addEventListener("mousedown", e => {
+  dragging = true;
+  originalOffset = {
+    top: boxEl.offsetTop,
+    left: boxEl.offsetLeft
+  };
+  originalMousePos = {
+    x: e.clientX,
+    y: e.clientY
+  };
+});
+
+boxEl.addEventListener("mouseup", e => {
+  dragging = false;
+});
+```
+
+<br/><br/>
+
+## 키보드 이벤트
+
+* `keydown` - keydown 이벤트는 키를 누르면 시작됩니다. keypress 이벤트와 달리, keydown 이벤트는 문자 값을 생성하는 키와 문자 값을 생성하지 않는 키에 대해 실행됩니다.
+
+* `keyup` - keyup 이벤트는 키를 놓을 때 발생합니다.
+
+```js
+const inputEl = document.querySelector("input");
+
+inputEl.addEventListener("keydown", e => {
+  console.log("keydown");
+});
+
+inputEl.addEventListener("keyup", e => {
+  console.log("keyup");
+});
+```
+
+<br/><br/>
+
+## 스크롤 이벤트
+
+* `scroll` - 스크롤 이벤트는 문서 뷰나 요소가 스크롤 될 때 발생합니다.
+
+```js
+document.addEventListener("click", e => {
+  console.log("scroll" + window.scrollY);
 });
 ```
 
